ShimmerScreen and retryAction

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">RickAndMorty</string>
     <string name="error_de_conexion">Error de conexión</string>
+    <string name="reintentar">Reintentar</string>
 </resources>
